# anncsu-sdk

./: README.md  USAGE.md  pyproject.toml
.github/workflows/: publish.yml
docs/: VALIDATION.md
docs/sdks/jsonpost/: README.md
docs/sdks/pathparam/: README.md
docs/sdks/queryparam/: README.md
docs/sdks/status/: README.md
src/anncsu/: basesdk.py  jsonpost.py  pathparam.py  queryparam.py  sdk.py  sdkconfiguration.py  status.py
src/anncsu/_hooks/: sdkhooks.py  types.py
src/anncsu/common/: __init__.py  sdkconfiguration.py  security.py
src/anncsu/errors/: apierror.py  elencoaccessigetpathparamop.py  elencoaccessigetqueryparamop.py  elencoaccessipostop.py  elencoaccessiproggetpathparamop.py  elencoaccessiproggetqueryparamop.py  elencoaccessiprogpostop.py  elencoodonimigetpathparamop.py  elencoodonimigetqueryparamop.py  elencoodonimipostop.py  elencoodonimiproggetpathparamop.py  elencoodonimiproggetqueryparamop.py  elencoodonimiprogpostop.py  esisteaccessogetpathparamop.py  esisteaccessogetqueryparamop.py  esisteaccessopostop.py  esisteodonimogetpathparamop.py  esisteodonimogetqueryparamop.py  esisteodonimopostop.py  prognazaccgetpathparamop.py  prognazaccgetqueryparamop.py  prognazaccpostop.py  prognazareagetpathparamop.py  prognazareagetqueryparamop.py  prognazareapostop.py  responsevalidationerror.py  show_statusop.py
src/anncsu/models/: elencoaccessigetpathparamop.py  elencoaccessigetqueryparamop.py  elencoaccessipostop.py  (+22 more)
src/anncsu_sdk/: __init__.py
tests/integration/: test_sdk_instantiation.py
tests/validation/: test_response_validator.py
(+8 files in other folders)
