[project]
name = "anncsu-sdk"
version = "0.1.0"
description = "ANNCSU Software Development Kit for API consumption"
readme = "README.md"
authors = [
    { name = "Francesco Bartoli", email = "francesco.bartoli@geobeyond.it" },
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"
